# src/main/java/de/eisingerf/elp/realtime/controller/dto/EventNameDto.java
@@ -5,13 +5,11 @@ import io.swagger.v3.oas.annotations.media.Schema;
 
 @Schema(name = "EventName", enumAsRef = true)
 public enum EventNameDto {
-	CREATE_JOURNAL_ENTRY, UPDATE_JOURNAL_ENTRY, DELETE_JOURNAL_ENTRY;
+	CHANGED_JOURNAL_ENTRY;
 
 	public static EventNameDto from(EventName eventName) {
 		return switch (eventName) {
-			case CREATE_JOURNAL_ENTRY -> EventNameDto.CREATE_JOURNAL_ENTRY;
-			case UPDATE_JOURNAL_ENTRY -> EventNameDto.UPDATE_JOURNAL_ENTRY;
-			case DELETE_JOURNAL_ENTRY -> EventNameDto.DELETE_JOURNAL_ENTRY;
+			case CHANGED_JOURNAL_ENTRY -> EventNameDto.CHANGED_JOURNAL_ENTRY;
 		};
 	}
 }
